# region-grower

./: .auto-changelog  .copier-answers.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  .pylintrc  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: run-tox.yml
doc/source/: conf.py  index.rst  methodology.rst
docs/source/: conf.py  index.rst  methodology.rst
examples/: grow_within_atlas.py
examples/O1/: cell_composition.yaml  circuit_config.json  collage_config.ini  create_cell_densities.py  create_mesh.py  fix_region.py  plot_cells.py  plot_synth_cells.py  region_structure.yaml  run.sh  test.py
region_grower/: __init__.py  app.py  atlas_helper.py  cli.py  context.py  generate.py  modify.py  morph_io.py  parameters_schema.json  placement_algorithm_mpi_app.py  placement_algorithm_utils.py  synthesize_morphologies.py  utils.py  validation.py  version.py
region_grower/data/: pc_in_types.yaml
region_grower/schemas/: distributions.json  parameters.json
scripts/distribution_definition/: add_diameter_info.py  (+1 more)
space_synthesis/: context.py  main.py
templates/: tmd_parameters.json
tests/: MPI_synthesize_morphologies.py  __init__.py  atlas_mock.py  conftest.py  data_factories.py  dummy_diameter_model.json  test_atlas_helper.py  test_cli.py  test_context.py  test_distributions.json  test_modify.py  test_morph_io.py  test_parameters.json  test_synthesize_morphologies.py  test_synthesize_morphologies_boundary.py  test_utils.py
(+25 files in other folders)
