[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
]

[tool.pydocstyle]
add-ignore = [
    "D107",  # Missing docstring in __init__
]
convention = "google"

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:.*is a deprecated alias for .*:DeprecationWarning",
]
